--- a/src/styles/rightSide.module.css
+++ b/src/styles/rightSide.module.css
@@ -14,6 +14,7 @@
     justify-content: space-around;
     flex-direction: column;
     text-align: center;
+    user-select: none;
 }
 
 .imageSec img{
@@ -55,6 +56,7 @@
     align-items: center;
     color: #fff;
     padding: 5px 5px;
+    height: 50px;
 }
 
 .icon{
@@ -79,8 +81,27 @@
 /* Message Box */
 .notesBox{
     width: 100%;
-    height: 65%;
+    height: 100%;
     background-color: #DAE5F5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.notesBox::-webkit-scrollbar{
+    width: .4vw;
+}
+
+/* .notesGrp::-webkit-scrollbar-corner{} */
+.notesBox::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 100px;
+}
+.notesBox::-webkit-scrollbar-track{
+    background-color: #000000A1;
+    border-radius: 100px;
 }
 
 .inputBox{
@@ -99,4 +120,57 @@
     border-radius: 10px;
     padding: 5px 10px 5px 12px;
     font-size: 18px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.inputBox textarea::-webkit-scrollbar{
+    width: .6vw;
+}
+
+.inputBox textarea::-webkit-scrollbar-thumb{
+    background-color: #ABABAB;
+    border-radius: 100px;
+}
+.inputBox textarea::-webkit-scrollbar-track{
+    background-color: #DAE5F5;
+    border-radius: 100px;
+}
+
+.sendIcon{
+    all: unset;
+    position: absolute;
+    bottom: 4%;
+    right: 4%;
+    font-size: 30px;
+    color:#ABABAB;
+}
+
+.notePad{
+    width: 90%;
+    margin-top: 10px;
+    margin-bottom: 10px; 
+    background: #fff;
+    padding: 15px 15px ;
+    font-size: 15px;   
+    border-radius: 10px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    font-weight: 500;
+}
+
+.dateTime{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.dateTime li{
+    font-size: 14px;
+    font-weight: 500;
+    /* list-style: none; */
+    margin: 15px 10px 0px 0px;
+}
+
+.dateTime li:nth-child(1){
+    list-style: none;
 }
