--- a/src/styles/leftSide.module.css
+++ b/src/styles/leftSide.module.css
@@ -5,7 +5,6 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
 }
 
 .leftSide{
@@ -25,7 +24,6 @@ body{
 }
 
 .notesGrp{
-    /* height: 80%; */
     width: 100%;    
     overflow-y: auto;
     overflow-x: hidden;
@@ -35,7 +33,6 @@ body{
     width: .4vw;
 }
 
-/* .notesGrp::-webkit-scrollbar-corner{} */
 .notesGrp::-webkit-scrollbar-thumb{
     background-color: #D9D9D9;
     border-radius: 100px;
@@ -43,42 +40,6 @@ body{
 .notesGrp::-webkit-scrollbar-track{
     background-color: #fff;
     border-radius: 100px;
-}
-
-.grpCard{
-    /* background-color: #2F2F2F2B; */
-    /* margin: 0px 0px 5px 0px; */
-    height: 80px;
-    display: flex;
-    align-items: center;
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.grpCard:hover{
-    background-color: #2F2F2F2B;
-}
-
-.grLogo{
-    /* background-color: blue; */
-    color: #fff;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    text-align: center;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    margin-left: 50px; 
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.grName{
-    margin-left: 10px;
-    font-size: 18px;
-    font-weight: 500;
-    overflow: hidden;
 }
 
 .addGrp{
@@ -97,32 +58,11 @@ body{
     z-index: 100;
 }
 
-.active{
-    background-color:#2F2F2F2B;
-}
 
-.leftSideMobile{
-    width: 100%;
-}
-
-/* Media Responsive Css */
-
+/* Responsive Css */
 @media only screen and (max-width:1070px) {
-    .grpCard{
-        height: 60px;
-    }
     .leftSide h2{
         font-size: 22px;
-    }
-    .grLogo{
-        margin-left: 5px;
-        width: 40px;
-        height: 40px;
-        font-size: 15px; 
-    }
-    .grName{
-        font-size: 15px;   
-        margin-left: 10px;
     }
     .addGrp{
         width: 50px;
@@ -136,19 +76,6 @@ body{
         font-size: 20px;
     }
 
-    .grpCard{
-        height: 55px;
-    }
-    .grLogo{
-        margin-left: 10px;
-        width: 35px;
-        height: 35px;
-        font-size: 13px; 
-    }
-    .grName{
-        font-size: 13px;   
-        margin-left: 10px;
-    }
     .addGrp{
         width: 50px;
         height: 50px;
@@ -156,18 +83,8 @@ body{
     }
 }
 @media only screen and (max-width:631px) {
-    .grpCard{
-        height: 50px;
-    }
-    .grLogo{
-        margin-left: 8px;
-        width: 30px;
-        height: 30px;
-        font-size: 13px; 
-    }
-    .grName{
-        font-size: 13px;   
-        margin-left: 5px;
+    .leftSide h2{
+        font-size: 18px;
     }
     .addGrp{
         width: 50px;
@@ -177,20 +94,7 @@ body{
 }
 @media only screen and (max-width:567px) {
     .leftSide h2{
-        font-size: 18px;
-    }
-    .grpCard{
-        height: 50px;
-    }
-    .grLogo{
-        margin-left: 5px;
-        width: 28px;
-        height: 28px;
-        font-size: 12px; 
-    }
-    .grName{
-        font-size: 12px;   
-        margin-left: 5px;
+        font-size: 15px;
     }
     .addGrp{
         width: 40px;
@@ -213,23 +117,10 @@ body{
     .notesGrp{
         width: 100%;
     }
-    .grpCard{
-        width: 100%;
-        height: 60px;
-    }
-    .grLogo{
-        margin-left: 15%;   
-        font-size: 18px;
-        width: 45px;
-        height: 45px;
-    }
-    .grName{
-        font-size: 18px;
-    }
     .addGrp{
         width: 50px;
         height: 50px;
     }
-
+    
 }
 
