--- a/src/styles/rightSide.module.css
+++ b/src/styles/rightSide.module.css
@@ -4,44 +4,6 @@
     background-color: #DAE5F5;
 }
 
-/* default Right side */
-.rightSideDefault{
-    background-color: #DAE5F5;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    text-align: center;
-    user-select: none;
-}
-
-.imageSec img{
-  max-width: 60%;
-  /* min-width: 30%; */
-  /* border: 2px solid black; */
-  height: auto;
-}
-.imageSec{
-    width: 100%;
-}
-.imageSec h2{
-    font-size: 30px;
-    font-weight:500;
-}
-
-.imageSec p{
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.encryption{
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-}
-
 /* notes section */
 .notesSection{
     display: flex;
@@ -70,7 +32,7 @@
     justify-content: center;
     margin-left: 50px;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .grpName{
@@ -147,13 +109,13 @@
 }
 
 .notePad{
-    width: 90%;
+    width: 85%;
     margin-top: 10px;
     margin-bottom: 10px; 
     background: #fff;
     padding: 15px 15px ;
     font-size: 15px;   
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     font-weight: 500;
 }
@@ -185,13 +147,6 @@
     place-content: center;
     margin: 0 10px 0 10px;
     display: none;
-    /* border: 1px solid white; */
-}
-
-/* for mobile screen */
-.displayBloclMobile{
-    width: 100%;
-    display: block;
 }
 
 /* Responsive */
@@ -215,18 +170,6 @@
 }
 
 @media screen and (max-width:681px) {
-    .imageSec h2{
-        font-size: 25px;
-    }
-    .imageSec p{
-        font-size: 15px;
-    }
-    .encryption{
-        font-size: 15px;
-    }
-    .inputBox{
-        height: 30%;
-    }
     .sendIcon{
         font-size: 20px;
     }
@@ -240,15 +183,6 @@
         height: 30px;
         font-size: 15px;
         margin-left: 10px;
-    }
-    .imageSec h2{
-        font-size: 20px;
-    }
-    .imageSec p{
-        font-size: 12px;
-    }
-    .encryption{
-        font-size: 12px;
     }
 }
 
@@ -266,5 +200,13 @@
     .grpName{
         font-size: 13px;
         margin-left: 10px;
+    }
+    .notePad{
+        width: 80%;
+        margin-top: 8px;
+        margin-bottom: 8px; 
+        background: #fff;
+        padding: 10px 10px ;
+        font-size: 13px;   
     }
 }
