--- a/src/styles/addGrpModel.module.css
+++ b/src/styles/addGrpModel.module.css
@@ -184,7 +184,8 @@
         position: absolute;
         left: 50%;
         transform: translate(-50%, -50%);
-        bottom: 2px;
+        margin-top: 20px;
+        bottom: 0px;
     }
 }
 
