modify color cotainer margin bottom

--- a/src/styles/addGrpModel.module.css
+++ b/src/styles/addGrpModel.module.css
@@ -166,6 +166,9 @@
         margin-left: 5px;
         font-size: 12px;
     }
+    .colorContainer{
+        margin-bottom: 10px;
+    }
     .chooseColors{
         margin-left: 2px;
     }
